<resources>
    <string name="app_name">Let\'s Play</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to Let\'s Play!!!</string>
    <string name="email_address">Email Address*</string>
    <string name="sign_in_sign_up">Sign In or Sign Up</string>
    <string name="sign_in_sign_up_desc">Button to Sign In or Sign Up</string>
    <string name="sign_up_desc">Button to Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password*</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="interested_sport">Interested Sports*</string>
    <string name="sport">Sport*</string>
    <string name="sport1">Sport 1*</string>
    <string name="sport2">Sport 2</string>
    <string name="sport3">Sport 3</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="security_question">Security Question*</string>
    <string name="new_password">New Password*</string>
    <string name="reset">Reset</string>
    <string name="home_screen">Home Screen</string>
    <string name="create">Create</string>
    <string name="view_join">View/Join</string>
    <string name="log_out">Logout</string>
    <string name="home_screen_image">Home Screen Image</string>
    <string name="home">Home</string>
    <string name="update_profile">Update Profile</string>
    <string name="create_an_event">Create an Event</string>
    <string name="date">Pick a Date*</string>
    <string name="time">Time*</string>
    <string name="place">Place*</string>
    <string name="view_join_the_event">View/Join the Event</string>
    <string name="update">Update</string>
    <string name="join">Join</string>
    <string name="reject">Reject</string>
    <string name="responded">Responded</string>
    <string name="interested">Interested</string>
    <string name="declined">Declined</string>
    <string name="comments">Comments</string>
    <string name="profile">Profile</string>
    <string name="events">Events</string>
    <string name="user_name">User Name*</string>

    <string-array name="sports1">
        <item>Select a sport*</item>
        <item>Soccer</item>
        <item>Cricket</item>
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Sking</item>
        <item>Skating</item>
    </string-array>

    <string-array name="sports">
        <item>Select a sport</item>
        <item>Soccer</item>
        <item>Cricket</item>
        <item>Baseball</item>
        <item>Badminton</item>
        <item>Sking</item>
        <item>Skating</item>
    </string-array>
    <string-array name="securityQuestions">
        <item>Select a security question*</item>
        <item>What is your birthplace?</item>
        <item>When did you graduate high school?</item>
        <item>What is primary school name?</item>
    </string-array>
    <string name="security_answer">Security Answer*</string>
</resources>