<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/HomeScreenConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeScreen">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/homeScreenAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/home_screen_title"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/home_screen_menu"
            app:title="@string/home_screen"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
            app:titleTextColor="#000000" />

    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/create"
        style="?attr/borderlessButtonStyle"
        android:layout_width="163dp"
        android:layout_height="75dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/andika"
        android:text="@string/create"
        android:textColor="#FFEB3B"
        android:textSize="24sp"
        app:backgroundTint="#C66D8B"
        app:layout_constraintEnd_toStartOf="@+id/view_join"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeScreenAppBarLayout" />

    <Button
        android:id="@+id/view_join"
        style="?attr/borderlessButtonStyle"
        android:layout_width="171dp"
        android:layout_height="75dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/andika"
        android:text="@string/view_join"
        android:textColor="#FFEB3B"
        android:textSize="22sp"
        app:backgroundTint="#C66D8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeScreenAppBarLayout" />

    <Button
        android:id="@+id/update_profile"
        style="?attr/borderlessButtonStyle"
        android:layout_width="246dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/andika"
        android:text="@string/update_profile"
        android:textColor="#FFEB3B"
        android:textSize="22sp"
        app:backgroundTint="#C66D8B"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="359dp"
        android:layout_height="234dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/home_screen_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_profile"
        tools:src="@tools:sample/backgrounds/scenic" />

</androidx.constraintlayout.widget.ConstraintLayout>